Fix spacing of cancel button in folders modal

--- a/app/frontend/components/_modal-form.scss
+++ b/app/frontend/components/_modal-form.scss
@@ -20,14 +20,14 @@
   }
 
   &__fields {
-    margin-bottom: 1rem;
+    margin-bottom: $global-margin;
   }
 
   &__buttons {
     margin-top: $global-margin * 2;
 
-    .button {
-      margin: 0;
+    &--cancel {
+      margin-right: $global-margin;
     }
   }
 }
